appId: dev.reactive.nativebinance
---
- launchApp
- extendedWaitUntil:
    visible:
      id: market-BTCUSDT
    timeout: 90000
- tapOn:
    id: market-BTCUSDT
- extendedWaitUntil:
    visible:
      id: segment-book
    timeout: 90000
- tapOn:
    id: segment-book
- extendedWaitUntil:
    visible:
      id: best-bid
    timeout: 90000
- assertVisible:
    id: symbol
- assertVisible:
    id: best-ask
- assertVisible:
    id: book-depth
